--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online CV Maker</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+   <navbar>
+    <div class="container-navbar">
+        <h2>Online Resume Builder</h2>
+
+    </div>
+   </navbar>
+   
+   
 
     
 </body>
