--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
 </head>
 <body>
 
-   <navbar>
-    <div class="container-navbar">
-        <h2>Online Resume Builder</h2>
-
-    </div>
-   </navbar>
+<div class="main"></div>
+   
    
    
 
