--- a/index.html
+++ b/index.html
@@ -34,7 +34,32 @@
 
         <button type="button" class="btn btn-primary custom-button">Create Resume</button>
 
+
+        <div class="div22">
+            <div class="div221">
+
+                <div class="prof">
+                    
+                </div>
+
+
+
+            </div>
+
+
+            <div class="div222">
+                <p class="para11"><b>Profile</b></p>
+
+                <p class="para12">A resume profile description is a concise and impactful statement that highlights your key qualifications, skills, and achievements at the beginning of your resume. It is designed to immediately capture the attention of hiring managers, recruiters, and prospective employers, conveying why you are an excellent fit for the position. A well-crafted resume profile should include a professional title, a summary statement, relevant experience, key skills, industry-related keywords, achievements, and personal attributes. It is essential to focus on tangible results and notable experiences directly related to the role you are applying for.</p>
+
+                <p class="para13"><b>Employment History</b></p>
+
+            </div>
+        </div>
+
     </div>
+
+   
 </div>
 
     
