--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
            
 
-        <button type="button" class="btn btn-primary custom-button">Create Resume</button>
+        <a href="/form.html"><button type="button" class="btn btn-primary custom-button">Create Resume</button></a>
 
 
         <div class="div22">
